# duckdb-athena-extension

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md
.github/workflows/: Linux.yml  Windows.yml  macOS.yml  release.yml
scripts/: append_extension_footer.py
src/: error.rs  lib.rs  table_function.rs  types.rs
